# blue-book

./: .gitignore  .gitmodules  .markdownjsonlint.json  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  tags.html
.github/workflows/: gh-pages.yml
aux/: tags.md
docs/: docs-site.md  index.md
docs-site/: index.html
github/workflows/: gh-pages.yml
