[tool.poetry]
name = "blue-book"
version = "0.1.0"
description = "A place for me to dump my thoughts and hopefully be able to make sense of them later!"
authors = [
    "C. Allwardt <3979063+craig8@users.noreply.github.com>"
]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/eclipse-volttron/volttron-testing"
homepage = "https://github.com/eclipse-volttron/volttron-testing"
keywords = []

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mkdocs = "^1.6.1"
proselint = "^0.14.0"
gitdb2 = "^4.0.2"
mkdocs-git-revision-date-localized-plugin = "^1.4.4"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-section-index = "^0.3.9"
mkdocs-newsletter = "^1.1.0"
mkdocs-autolinks-plugin = "^0.7.1"
mkdocs-exclude-search = "^0.6.6"
mkdocs-zettelkasten = "^0.4.0"
tags-macros-plugin = {path = "mkdocs-plugin-tags"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 120
split_before_logical_operator = true

[tool.mypy]
[mypy]
# For a complete list of options, see https://mypy.readthedocs.io/en/stable/config_file.html
python_version = 3.10
show_error_context = true
pretty = true
show_column_numbers = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
